Added note about -1's from mailing list convo.

--- a/views/email.twig
+++ b/views/email.twig
@@ -30,6 +30,12 @@ How'd they hear about us:
 Preferred gender pronoun:
 {{preferred_gender_pronoun}}
 
+--------------
+
+Membership process will halt with two -1's. Please send any -1's privately to board@hacklab.to
+
+Further details of process:
+https://wiki.hacklab.to/Joining_HackLab#Application_Process
 
 --------------
 
